WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
122012
LLInt alignment problem on ARM in debug mode
https://bugs.webkit.org/show_bug.cgi?id=122012
Summary
LLInt alignment problem on ARM in debug mode
Gabor Rapcsanyi
Reported
2013-09-27 06:12:46 PDT
GCC put the LLInt code into .rodata section and that casues alignment problem on ARM. I tried several alignment settings (.align, .balign) but none of them worked for me on Thumb2. When I forced to put it to .text section it worked well.
Attachments
proposed fix
(1.61 KB, patch)
2013-09-27 06:30 PDT
,
Gabor Rapcsanyi
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Gabor Rapcsanyi
Comment 1
2013-09-27 06:30:08 PDT
Created
attachment 212802
[details]
proposed fix
WebKit Commit Bot
Comment 2
2013-09-27 09:36:30 PDT
Comment on
attachment 212802
[details]
proposed fix Clearing flags on attachment: 212802 Committed
r156549
: <
http://trac.webkit.org/changeset/156549
>
WebKit Commit Bot
Comment 3
2013-09-27 09:36:31 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug