LLInt alignment problem on ARM in debug mode https://bugs.webkit.org/show_bug.cgi?id=122012

Reviewed by Michael Saboff.

Force GCC to put the LLInt code to .text section.

* llint/LowLevelInterpreter.cpp:


Canonical link: https://commits.webkit.org/140048@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@156549 268f45cc-cd09-0410-ab3c-d52691b4dbfc